[gd_scene load_steps=4 format=3 uid="uid://mvx8icctge75"]

[ext_resource type="LabelSettings" uid="uid://cysg3dgy7bb23" path="res://Assets/pause_label_settings.tres" id="1_mdf75"]
[ext_resource type="Script" path="res://Interfaces/options_popup.gd" id="1_vru16"]
[ext_resource type="FontFile" uid="uid://duk3lygtddcxa" path="res://Assets/h_NokiaCellphoneFC.ttf" id="2_qxxf2"]

[node name="Options_popup" type="Popup"]
title = "Options"
position = Vector2i(8, 8)
size = Vector2i(368, 200)
visible = true
script = ExtResource("1_vru16")

[node name="BG_popup" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.08294e-07, 0.156971, 0.185611, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -60.0
offset_right = 113.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Audio" type="Label" parent="HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxxf2")
theme_override_font_sizes/font_size = 12
text = "Audio"
vertical_alignment = 1
uppercase = true

[node name="BGM_Volume" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "BGM Volume"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="SFX_Volume" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "SFX Volume"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="Video" type="Label" parent="HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxxf2")
theme_override_font_sizes/font_size = 12
text = "Video
"
vertical_alignment = 1
uppercase = true

[node name="Mode" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "Mode
"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="VSinc" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "VSinc
"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="Controls" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Controls"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/Controls"]
layout_mode = 2

[node name="bgm_slider" type="HSlider" parent="HBoxContainer/Controls"]
layout_mode = 2
min_value = -50.0
max_value = 0.0
value = -15.0
ticks_on_borders = true

[node name="sfx_slider" type="HSlider" parent="HBoxContainer/Controls"]
layout_mode = 2
min_value = -50.0
max_value = 0.0
value = -15.0
ticks_on_borders = true

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Controls"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/Controls"]
layout_mode = 2

[node name="MenuButton" type="OptionButton" parent="HBoxContainer/Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxxf2")
theme_override_font_sizes/font_size = 8
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/Controls"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxxf2")
theme_override_font_sizes/font_size = 8
text = "VSync"
alignment = 2
text_direction = 3

[node name="extras" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/extras"]
layout_mode = 2

[node name="HSeparator7" type="HSeparator" parent="HBoxContainer/extras"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/extras"]
layout_mode = 2

[node name="bgm_vol" type="Label" parent="HBoxContainer/extras"]
layout_mode = 2
text = "80 db"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="sfx_vol" type="Label" parent="HBoxContainer/extras"]
layout_mode = 2
text = "80 db"
label_settings = ExtResource("1_mdf75")
vertical_alignment = 1

[node name="HSeparator6" type="HSeparator" parent="HBoxContainer/extras"]
layout_mode = 2

[node name="Accept" type="Button" parent="HBoxContainer/extras"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxxf2")
theme_override_font_sizes/font_size = 12
text = "Aceptar"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="value_changed" from="HBoxContainer/Controls/bgm_slider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Controls/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/Controls/MenuButton" to="." method="_on_menu_button_item_selected"]
[connection signal="toggled" from="HBoxContainer/Controls/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="HBoxContainer/extras/Accept" to="." method="_on_accept_pressed"]
